--- a/construction/style.css
+++ b/construction/style.css
@@ -1,9 +1,4 @@
-.class-1{
 
- background-color:da; 
- border-style 
-
-}
 
 .class-2{
 
@@ -17,6 +12,7 @@
 .class-3{
 
  height: 30px;
+ width:100px;
  border-radius: 5px;
  background-color: yellow;
  border-style:solid;
@@ -26,7 +22,7 @@
 .class-4{
 
  height:400px;
- width:985px;
+ width:99.5%;
  border-style:solid;
 
 }
