--- a/construction/style.css
+++ b/construction/style.css
@@ -4,27 +4,28 @@
 
  height: 30px;
  background-color: darkslateblue;
- padding: 20px;
+ padding: 15px;
  border-style:solid;
-
+ 
 }
 
 .class-3{
 
  height: 30px;
- width:100px;
+ width:105px;
  border-radius: 5px;
  background-color: yellow;
  border-style:solid;
-
+ padding: 5px;
 }
 
 .class-4{
 
- height:400px;
+ height:300px;
  width:99.5%;
  border-style:solid;
-
+ margin-bottom: -5px;
+ 
 }
 
 .class-5{
@@ -41,4 +42,28 @@ height: 300px;
 background-color:darkslateblue;
 border-style:solid;
  
+}
+
+.class-7{
+
+height:160px;
+width:160px;
+
+}
+
+.class-8{
+
+ margin-top:180px;
+ margin-left:300px;
+ border-style:solid;
+ height:300px;
+ width:180px;
+ padding:60px;
+ background-color:yellow;         
+}
+
+.class-9{
+
+ height:30px;
+ width:60px;
 }
