--- a/cv web page/style.css
+++ b/cv web page/style.css
@@ -1,254 +1,82 @@
-.outer-div{
-   
-}
+.outer-div{}
 
 .main-div{
-padding: 30px 130px 30px 130px;
+ padding: 30px 130px 30px 130px;
 }
+
+
 
 .left-div{
  background-color: black;
- 
  display: inline-block;
- border-bottom-left-radius: 80px;
- border-style:solid; 
+ 
+ border-style:solid;
+ padding: 20px; 
 }
 
 .image{
-
-height:250px;
-width: 280px;
-border-top-left-radius: 80px;
-margin-top: 10px;
+ height:240px;
+ width: 255px;
+ border-top-left-radius: 80px;
+ margin-top: 10px;
 }
 
-.left-internal-1A-div{
-
-height: 50px;
-width: 280px;
-background-color:black;
-
-margin-top: 1px;
+.left-heading-BOX-div{
+ height: 50px;
+ width: 255px;
+ background-color:red;
+ margin-top: 1px;
 }
  
-.left-internal-1a-div{
+.left-internal-heading-div{
+ margin-left: 35px; 
+ padding: 10px;
+ font-size: 20px;
+ color: white;   
+}
 
-margin-left: 35px; 
-padding: 10px;
-font-size: 20px;
-color: white;   
+.left-internal-BOX-div{
+ height: 120px;
+ width: 255px;
+ background-color: bisque;
+ 
+}
+
+.left-internal-point-div{
+ font-size: 17px;
+ padding: 50px 40px 60px 20px;
+ margin-left: 20px;
 }
 
 
-.left-internal-2A-div{
-
-height: 50px;
-width: 280px;
-background-color:midnightblue;
-border-bottom-right-radius: 40px;
-
-}
-
-.left-internal-2a-div{
-
-margin-left: 65px; 
-padding: 10px;
-font-size: 20px;
-color: white;   
-}
-
-.left-internal-2b-div{
-
-  font-size: 17px;
-  padding: 50px 40px 60px 20px;
-  margin-left: 20px;
-  
-
-}
-
-.left-internal-2B-div{
-
-height: 160px;
-width: 280px;
-background-color: bisque;
-
-}
-
-.left-internal-3A-div{
-
-height: 50px;
-width: 280px;
-background-color: green;
-border-bottom-right-radius: 40px;
-
-}
-
-.left-internal-3a-div{
-
-margin-left: 75px; 
-padding: 10px;
-font-size: 20px;
-color: white;   
-}
-
-.left-internal-3b-div{
-
-  font-size: 17px;
-  padding: 50px 40px 60px 20px;
-  margin-left: 20px;
-  
-
-}
-
-.left-internal-3B-div{
-
-height: 160px;
-width: 280px;
-background-color: bisque;
-
-
-}
-
-.left-internal-4A-div{
-
-height: 50px;
-width: 280px;
-background-color: goldenrod;
-border-bottom-right-radius: 40px;
-
-}
-
-.left-internal-4a-div{
-
-margin-left: 75px; 
-padding: 10px;
-font-size: 20px;
-color: white;   
-}
-
-.left-internal-4b-div{
-
-  font-size: 17px;
-  padding: 50px 40px 60px 20px;
-  margin-left: 20px;
-  
-
-}
-
-.left-internal-4B-div{
-
-height: 160px;
-width: 280px;
-background-color: bisque;
-border-bottom-left-radius: 80px;
-
-
-}
 
 .right-div{
- background-color:darkmagenta;
- 
+ background-color:darkmagenta; 
  display: inline-block;
-  margin-bottom:-602px;
  border-style:solid;
+ padding: 20px;
+}
+
+.right-internal-heading-div{
+ font-size: 20PX;
+ margin-top: 13.5px;
+ color: RED;
+ margin-left: 80px;
+}
+
+.right-internal-BOX-div{
+ height: 151.5px;
+ width: 80%;
+ background-color:bisque;
+ margin-left: 80px;
+ margin-top: 5PX;
+}
+
+.right-internal-point-div{
+ font-size: 17px;
+ padding: 50px 40px 60px 20px;
+ margin-left: 20px;
 }
 
 
-.right-internal-topA-div{
-
-font-size: 20PX;
-margin-top: 0px;
-color: white;
-margin-left: 80px;
-}
-
-.right-internal-topB-div{
-
-height: 180px;
-width: 80%;
-background-color:bisque;
-margin-left: 80px;
-margin-top: 10PX;
-}
-
-.right-internal-1A-div{
-
-font-size: 20PX;
-margin-top: 88px;
-color: white;
-margin-left: 80px;
-}
- 
-.right-internal-1b-div{
-
-  font-size: 17px;
-  padding: 50px 40px 60px 20px;
-  margin-left: 20px;
-  
-
-}
-
-.right-internal-1B-div{
-
-height: 160px;
-width: 80%;
-background-color:bisque;
-margin-left: 80px;
-margin-top: 0PX;
-}
-
-.right-internal-2A-div{
-
-  font-size: 20PX;
-margin-top: 20px;
-color: white;
-margin-left: 80px;
-
-}
-
-.right-internal-2b-div{
-
-  font-size: 17px;
-  padding: 50px 40px 60px 20px;
-  margin-left: 20px;
-  
-
-}
-
-.right-internal-2B-div{
-
-height: 160px;
-width: 80%;
-background-color:bisque;
-margin-left: 80px;
-margin-top: 0PX; 
-
-}
-
-.right-internal-3A-div{
-
-font-size: 20px;
-margin-top: 20px;
-color: white;
-margin-left: 80px;
-}
-
-.right-internal-3b-div{
-
-  font-size: 17px;
-  padding: 50px 40px 60px 20px;
-  margin-left: 20px;
-  
-
-}
-
-.right-internal-3B-div{
-
-height: 160px;
-width: 80%;
-background-color:bisque;
-margin-left: 80px;
-margin-top: 0PX; 
-
-}
 
